# python-codex-env

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GAME_README.md  Makefile  PLAN.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  start_tunnel.py
CODEX-AGENT-REFERENCES/: ExecPlan.md  clanker.md  deepfake_radio_codebase.txt  rust_chatbot.txt  sparky_codebase.txt
configs/: local.yaml
docker/: Makefile  template.env
docs/: bq-util.md  container-setup.md  discord_research_notes.md  discord_route_validation.md  getting-started.md  index.md  project-structure.md  rust-gdext.md  starter-pack.md  tooling.md
docs/reference/: api.md  auto-docs-bot.md  resources.md
game/: .gitignore  DESIGN_DOC_CHECKLIST.md  FEATURES_COMPLETE.md  QA_REPORT.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
game/e2e/: game-flow.spec.ts
game/src/: App.css  App.tsx
game/src/components/: Item.css  Item.tsx  ItemPalette.css  ItemPalette.tsx  Room.css  Room.tsx
game/src/data/: itemDefinitions.ts
game/src/styles/: global.css
game/src/systems/: EnergySystem.ts  InteractionSystem.ts
game/src/systems/__tests__/: EnergySystem.test.ts  InteractionSystem.test.ts
game/src/test/: setup.ts
game/src/types/: game.ts  interactions.ts  items.ts
godot/: project.godot
godot/.godot/: extension_list.cfg
godot/addons/my_ext/: my_ext.gdextension
godot/scripts/: Main.gd  smoke_test.gd
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/gdext_bridge/: Cargo.toml
rust/gdext_bridge/src/: lib.rs
scratch/: cec_commands.md  lg_b2_webos_notes.md
src/: app.py  baml_client.py  button_game.py  example.py
src/admute/: __init__.py  actuator_base.py  actuator_cec.py  actuator_webos.py  control.py  detector.py  ingest.py  runner.py  state_machine.py  web_app.py
src/admute/docs/: 00_tour.md  01_module_brief.md  02_architecture.md  03_data_state.md  04_interfaces.md  05_onboarding_exercises.md  06_tests.md
src/auto_docs_bot/: README.md  __init__.py  agent_runner.py  agent_strategies.py  agent_strategy.py  app.py  baml_integration.py  commands.py  github_app.py  github_client.py  models.py  repo_intel.py  settings.py  webhook.py
src/auto_docs_bot/docs/implementation/: data_state.md  interfaces.md  tests.md
src/auto_docs_bot/docs/onboarding/: exercises.md
src/auto_docs_bot/docs/overview/: architecture.md  module_brief.md  tour.md
src/bq_util/: __init__.py  bigquery_client.py  cli.py  config.py  jobs.py  projects.py  query.py
src/discord_reader/: __init__.py  channels.py  client.py  guilds.py  inbox.py  messages.py  models.py  search.py
src/dread/: __init__.py  cli.py  config.py  formatting.py
src/obsidian_srs_agent/: __init__.py  baml.yaml
src/obsidian_srs_agent/app/: agent.py  baml_client.py  main.py  models.py  text.py  tools.py  vault.py  web.py
src/obsidian_srs_agent/baml/: cards.baml
src/obsidian_srs_agent/templates/: form.html
src/pi_docs_bot/: __init__.py  command.py  config.py  models.py  policy.py  validation.py
src/tomli/: __init__.py
templates/: index.html  mkdocs.yml.template
templates/.github/workflows/: ci.yml.template
templates/docs/: getting-started.md.template  index.md.template  project-structure.md.template  rust-gdext.md.template  starter-pack.md.template  tooling.md.template
templates/docs/reference/: resources.md.template
tests/: __init__.py  test_actuator_cec.py  test_actuator_webos.py  test_agent_flow.py  test_app.py  test_auto_docs_bot.py  test_button_game.py  test_chunking.py  test_cli.py  test_cli_analyze.py  test_cli_config.py  test_cli_query.py  test_client.py  test_config.py  test_control.py  test_detector.py  test_docs_setup.py  test_example.py  test_generator_fallback.py  test_inbox.py  test_openai_integration.py  test_pi_docs_bot.py  test_routes_contract.py  test_runner_simulation.py  test_search_mentions.py  test_state_machine.py  test_strands_agent.py  test_vault_writer.py  test_web_app.py  test_web_preview.py
tests/e2e/: test_discord_e2e.py
