[project]
name = "python-collab-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alex furrier", email = "afurrier@gmail.com" }
]
requires-python = ">= 3.9"
readme = "README.md"
dependencies = [
    "fastapi>=0.120.0",
    "githubkit[auth-app]>=0.13.4",
    "httpx>=0.28.1",
    "PyJWT>=2.10.1",
    "starlette>=0.48.0,<0.49.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",      # Type checking
    "pytest>=8.1.1",    # Testing
    "pytest-cov>=5.0.0", # Coverage reporting
    "pytest-asyncio>=0.23.0",  # Async test support
    "ruff>=0.3.0",      # Linting and formatting
    "pre-commit>=3.6.0", # Pre-commit hooks
    "tomli>=2.0.1",     # TOML reading
    "tomli-w>=1.0.0",   # TOML writing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.26.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings  
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "TID",    # flake8-tidy-imports
    "E402",   # module-import-not-at-top-of-file
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "ICN",    # flake8-import-conventions
]

ignore = [
    "E501",   # line too long (handled by line-length)
    "TID252", # prefer absolute imports (keep relative for internal imports)
    "S101",   # assert used (acceptable in tests)
]

[tool.ruff.lint.flake8-tidy-imports]
# Prevent specific problematic imports
banned-api = {}

[tool.ruff.lint.isort]
known-first-party = ["python-collab-template"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
follow_imports = "skip"
ignore_missing_imports = true
