[project]
name = "bq-util"
version = "0.1.0"
description = "Command line tooling for analysing and executing Google BigQuery jobs"
authors = [
    { name = "alex furrier", email = "afurrier@gmail.com" }
]
requires-python = ">= 3.9"
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",      # Type checking
    "pytest>=8.1.1",    # Testing
    "pytest-cov>=5.0.0", # Coverage reporting
    "ruff>=0.3.0",      # Linting and formatting
    "pre-commit>=3.6.0", # Pre-commit hooks
    "tomli>=2.0.1",     # TOML reading
    "tomli-w>=1.0.0",   # TOML writing
]
cli = [
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-bigquery-storage>=2.25.0",
    "pandas>=2.2.0",
    "InquirerPy>=0.3.4",
    "db-dtypes>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/safurrier/python-codex-env"
Documentation = "https://safurrier.github.io/bq-util/"

[project.scripts]
bq-util = "bq_util.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.26.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bq_util"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "TID",    # flake8-tidy-imports
    "E402",   # module-import-not-at-top-of-file
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "ICN",    # flake8-import-conventions
]

ignore = [
    "E501",   # line too long (handled by line-length)
    "TID252", # prefer absolute imports (keep relative for internal imports)
    "S101",   # assert used (acceptable in tests)
]

[tool.ruff.lint.flake8-tidy-imports]
# Prevent specific problematic imports
banned-api = {}

[tool.ruff.lint.isort]
known-first-party = ["bq_util"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
